# Problem_Solving

./:  Forbidden_Integer.cpp  +-x.cpp  .gitignore  0, 1, 2, Tree!.cpp  1D_Eraser.cpp  2-variable_Function.cpp  2D_Sort.cpp  2Sort.cpp  326-like Numbers.cpp  378QAQ and Mocha's Array.cpp  3SUM.cpp  A BIT of a Construction.cpp  A Bug’s Life.cpp  A Growing Tree.cpp  A Needle in the Haystack.cpp  A Simple GCD Problem (Easy Version).cpp  A Simple GCD Problem (Hard Version).cpp  A Simple RBS Problem.cpp  A Simple Sequence.cpp  A TRUE Battle.cpp  A Trivial String Problem.cpp  A Wide, Wide Graph.cpp  A and B.cpp  A+B.cpp  ABC_Path.cpp  AC or WA.cpp  ADA_Queue.cpp  AG-Cipher_Shifer.cpp  AGAGA_XOOORRR.cpp  AND_Sorting.cpp  Abdelaleem's MagicSum Challenge.cpp  Abraham's Great Escape.cpp  Ada and Indexing.cpp  Ada and Spring Cleaning.cpp  Ada and Teams.cpp  Add Arithmetic Progression On Segment.cpp  Adding Reversed Numbers.cpp  Adding.cpp  Addition and First element at least X.cpp  Addition and Minimum.cpp  (+1222 more)
Notes/: Notes  Permutations  Subarrays
