cmake_minimum_required(VERSION 3.30)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 23)

include_directories(.)

add_executable(Problem_Solving
        "The 67th Iteration of Counting is Fun.cpp"
        #        "Tree Distance.cpp"
        #        "Concat Power of 2.cpp"

        #        "A Trivial String Problem.cpp"
        #        "GCD Counting.cpp"
        #        "Sum of Squares with Segment Tree.cpp"
        #                Gambling.cpp
        #        "Minimize The Integer.cpp"
        #        Queries.cpp
        #        "Polynomial Queries.cpp"
        #        "Copy String.cpp"
        #        "Query on a tree II.cpp"
        #        "Minimal Grid Path.cpp"
        #        "Breach of Faith.cpp"
#                 Pearls.cpp
        #         Cubes.cpp
)
